test/data/fail/statements/for.js
for(let [a.b] in {});
for(const a; a < 1; ++a);
for(let a = 1 in {});
for(a = 1 in {});
for(let a; )
for await(let a in {});
